modules/gdscript/tests/scripts/analyzer/errors/getter_with_wrong_return_type.gd
var a: int: get = getter

func test():
	pass

func getter() -> String:
	prints("getter")
	return a
